# grpc-rs

./: Cargo.toml
bincode-example/: Cargo.toml
bincode-example/examples/hello_world/: client.rs  server.rs
bincode-example/src/: lib.rs
src/: codec.rs  lib.rs
